Update vercel-php runtime to 0.7.0 to fix libssl error

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "framework": null,
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.6.0"
+      "runtime": "vercel-php@0.7.0"
     }
   },
   "routes": [
@@ -13,10 +13,11 @@
     }
   ],
   "outputDirectory": "public",
+  "buildCommand": "npm install && npm run build && php artisan optimize:clear && php artisan config:cache && php artisan route:cache && php artisan view:cache",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "0",
-    "APP_URL": "https://your-project-name.vercel.app", 
+    "APP_URL": "https://your-project-name.vercel.app",
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
