--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     }
   ],
   "outputDirectory": "public",
-  "buildCommand": "npm install && npm run build && php artisan optimize:clear && php artisan config:cache && php artisan route:cache && php artisan view:cache",
+  "buildCommand": "npm install && npm run build && composer install --no-dev --prefer-dist && php artisan optimize:clear && php artisan config:cache && php artisan route:cache && php artisan view:cache", 
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "0",
