--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,17 @@
   "framework": null,
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.7.0"
+      "runtime": "vercel-php@0.7.0",
+
+      "config": {
+        "phpExtensions": ["opcache"],
+        "phpArtisanCommands": [
+          "optimize:clear",
+          "config:cache",
+          "route:cache",
+          "view:cache"
+        ]
+      }
     }
   },
   "routes": [
@@ -13,7 +23,7 @@
     }
   ],
   "outputDirectory": "public",
-  "buildCommand": "npm install && npm run build && php artisan optimize:clear && php artisan config:cache && php artisan route:cache && php artisan view:cache",
+  "buildCommand": "npm install && npm run build",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "0",
