--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,7 @@
   "framework": null,
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.7.0",
-
-      "config": {
-        "phpExtensions": ["opcache"],
-        "phpArtisanCommands": [
-          "optimize:clear",
-          "config:cache",
-          "route:cache",
-          "view:cache"
-        ]
-      }
+      "runtime": "vercel-php@0.7.0"
     }
   },
   "routes": [
@@ -23,7 +13,7 @@
     }
   ],
   "outputDirectory": "public",
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm install && npm run build && php artisan optimize:clear && php artisan config:cache && php artisan route:cache && php artisan view:cache",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "0",
