--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     }
   ],
   "outputDirectory": "public",
-  "buildCommand": "npm install && npm run build && php artisan optimize:clear && php artisan config:cache && php artisan route:cache && php artisan view:cache",
+  "buildCommand": "npm install && npm run build && /usr/bin/php artisan optimize:clear && /usr/bin/php artisan config:cache && /usr/bin/php artisan route:cache && /usr/bin/php artisan view:cache",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "0",
